Add Team member suspension lifecycle
